Fix menu alignment and toggle button color

--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -54,6 +54,15 @@
     box-shadow: 0 0 0 .25rem hsla(275, 10%, 100%, .57);
 }
 
+.text-bg-brand .navbar-toggler {
+    color: hsla(0, 0%, 100%, 0.7);
+    border-color: hsla(0, 0%, 100%, 0.15);
+}
+
+.text-bg-brand .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.65%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
 /* Dark mode theme colors */
 [data-bs-theme="dark"] .text-bg-brand {
     background-color: hsl(275, 42%, 23%);
